tests/NormalTests/paczka1/small_fuzzy/58299653.err
Error in line 2: RHqHU A788 93,3
Error in line 1: CZyncAXwI8O S500 38,9
Error in line 7: CZyncAXwI8O S291 11,1
Error in line 11: USH S500 84,2
Error in line 10: 0A3xfbJ S291 54,0
